[Feature][update infomation included contact, skill]

--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
                         <!-- /.site-slogan-->
                         <div class="social-link">
                             <ul class="social-profiles">
-                                <li class="item"><a href="#" class="fa-linkedin"><span>LinkedIn</span></a></li>
-                                <li class="item"><a href="#" class="fa-stack-overflow"><span>Stack Overflow</span></a></li>
+                                <li class="item"><a href="https://www.linkedin.com/in/duy-trinh-23639a146" class="fa-linkedin"><span>LinkedIn</span></a></li>
+                                <li class="item"><a href="https://stackoverflow.com/users/15997058/immortaler" class="fa-stack-overflow"><span>Stack Overflow</span></a></li>
                                 <li class="item"><a href="https://github.com/quangduy13" class="fa-github"><span>Github</span></a></li>
-                                <li class="item"><a href="https://www.facebook.com/trinh.quangduy.560" class="fa-facebook"><span>Facebook</span></a></li>
                             </ul>
                         </div>
                         <!-- /.social-link -->
@@ -96,7 +95,7 @@
                         <address>
                             <ul class="address-line">
                                 <li class="fa-map-marker">Ho Chi Minh City</li>
-                                <li class="fa-phone">0918110580</li>
+                                <li class="fa-phone">0918***580</li>
                                 <li class="fa-envelope"><a href="mailto:quangduy.hcmut@gmail.com">quangduy.hcmut@gmail.com</a></li>
                             </ul>
                         </address>
@@ -120,18 +119,15 @@
                     <div class="section-box">
                         <h2 class="box-title">Programming languages</h2>
                         <ul>
+                            <li>Java</li>
                             <li>C#. NET</li>
                             <li>JavaScript</li>
                             <li>HTML, CSS</li>
-                            <li>Java</li>
                         </ul>
                         <h2 class="box-title">Frameworks & platforms</h2>
                         <ul>
-                            <li>ReactJS / AngularJS / NodeJS</li>
-                            <li>AngularJS / jQuery / Twister Bootstrap / MaterializeCSS</li>
-                            <li>ASP.NET MVC / Entity Framework / LINQ to SQL</li>
-                            <li>ASP WebAPI / RestfulAPI / JSON, XML</li>
-                            <li>Javascript SDK: FacebookSDK, Firebase, MongoLab API</li>
+                            <li>Spring Boot, Spring MVC</li>
+                            <li>Knowledge about ASP.NET MVC /JavaScript/Node JS</li>
                         </ul>
                     </div>
                 </div>
@@ -139,21 +135,19 @@
                     <div class="section-box">
                         <h2 class="box-title">Database</h2>
                         <ul>
-                            <li>Microsoft SQL</li>
+                            <li>SQL Server</li>
                             <li>MySQL</li>
                             <li>MongoDB</li>
                         </ul>
                         <h2 class="box-title">Version Control</h2>
                         <ul>
                           <li>Git (Git Shell & Github)</li>
-                          <li>Team Foundation Server</li>
-                          <li>SVN (TortoiseSVN & VisualSVN)</li>
                         </ul>
                         <h2 class="box-title">IDE</h2>
                         <ul>
+                            <li>IntelliJ</li>
                             <li>Atom</li>
                             <li>Visual Studio 2012 & 2013</li>
-                            <li>Eclipse & Netbeans</li>
                         </ul>
                     </div>
                 </div>
@@ -165,9 +159,9 @@
                         </ul>
                         <h2 class="box-title">Knowledge</h2>
                         <ul>
-                            <li>Deep understanding about OOP, Design Pattern, SOLID principles, Dependency Injection, ...</li>
+                            <li>Knowledge about OOP, Design Pattern, SOLID principles, Dependency Injection, ...</li>
                             <li>Good understanding about the Agile and Scrum process</li>
-                            <li>Good understanding software design, database design, RestfulAPI, ...</li>
+                            <li>Understanding software design, database design, RestfulAPI, ...</li>
                             <li>Good time management, presentation and teamwork skills ...</li>
                         </ul>
                     </div>
