--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li class="item"><a href="#skills" class="fa-signal">Skills</a></li>
                 <li class="item"><a href="#experiences" class="fa-bar-chart-o">Experiences</a></li>
                 <li class="item"><a href="#education" class="fa-book">Education</a></li>
+                <li class="item"><a href="video.html" class="fa-book">Video</a></li>
             </ul>
             <!-- /.navigation -->
         </nav>
