--- a/index.html
+++ b/index.html
@@ -186,95 +186,39 @@
                       <!-- /.name-designation -->
                       <div class="stay-time light-violet">
                           <p>
-                              02/2016
+                              06/2019
                               <br /> -<br/>
                               Present
                           </p>
                       </div>
                       <!-- /.stay-time -->
                       <div class="comments" data-scroll-reveal="enter from the right after .5s">
-                          <li><span class="bold">Project</span>:iLancaster</li>
-                          <li><span class="bold">Project Description</span>: A free mobile app delivering Lancaster University services, resources, and information - at your fingertips - whenever you want them, from wherever you are!</li>
-                          <li><span class="bold">Team Size</span>: 9</li>
-                          <li><span class="bold">Responsiblities</span>: Meeting with customers and teammates to get clear requirement. Develop the frameworks and modules of the system.</li>
-                          <li><span class="bold">Accomplishments</span>: Learned new Microsoft technologies and frameworks. Improved teamwork and communication skills.</li>
-                          <li><span class="bold">Technologies</span>: Front-end: ReactJS + Redux, Webpack. Back-end ASP.NET MVC5, Entity Framework.</li>
+                          <li><span class="bold">Project</span>:Vinhomes, Loyalty</li>
+                          <li><span class="bold">Technologies</span>: Java Spring Boot.</li>
                       </div>
                       <!-- /.comments -->
                   </div>
                   <!-- /.experience-item -->
                     <div class="experience-item" data-scroll-reveal="enter from the bottom over .5s">
                         <div class="name-designation" data-scroll-reveal="enter from the left after .5s">
-                            <h3 class="designation">Developer</h3>
-                            <p class="name-of-org">Aswig Solutions</p>
+                            <h3 class="designation">Junior Developer</h3>
+                            <p class="name-of-org">Topica EdTech Group</p>
                         </div>
                         <!-- /.name-designation -->
                         <div class="stay-time light-yellow">
                             <p>
-                                10/2014
+                                11/2017
                                 <br /> -<br/>
-                                10/2015
+                                6/2019
                             </p>
                         </div>
                         <!-- /.stay-time -->
                         <div class="comments" data-scroll-reveal="enter from the right after .5s">
-                            <li><span class="bold">Project</span>:Foundation</li>
-                            <li><span class="bold">Project Description</span>: A system which serves as a gateway, checks the authentication and authorization of the users from other applications.</li>
-                            <li><span class="bold">Team Size</span>: 12</li>
-                            <li><span class="bold">Responsiblities</span>: Meeting with customers and teammates to get clear requirement. Develop the frameworks and modules of the system.</li>
-                            <li><span class="bold">Accomplishments</span>: Learned new Microsoft technologies and frameworks. Improved teamwork and communication skills.</li>
-                            <li><span class="bold">Technologies</span>: ASP.NET MVC5, Entity Framework, AngularJS, Claim-based Identity, Thinktecture Identity Server.</li>
+                            <li><span class="bold">Project</span>: Web Application Manage and Add Label Comment</li>
+                            <li><span class="bold">Technologies</span>: ASP.NET MVC5, Entity Framework, Java, Spring Boot Framework</li>
                         </div>
                         <!-- /.comments -->
                     </div>
-                    <!-- /.experience-item -->
-                    <div class="experience-item" data-scroll-reveal="enter from the bottom over .5s">
-                        <div class="name-designation" data-scroll-reveal="enter from the left after .5s">
-                            <h3 class="designation">Junior Developer</h3>
-                            <p class="name-of-org">FPT Software Ho Chi Minh</p>
-                        </div>
-                        <!-- /.name-designation -->
-                        <div class="stay-time light-green">
-                            <p>
-                                01/2014
-                                <br /> -
-                                <br />
-                                09/2014
-                            </p>
-                        </div>
-                        <!-- /.stay-time -->
-                        <div class="comments" data-scroll-reveal="enter from the right after .5s">
-                            <ul>
-                                <li><span class="bold">Project</span>: Nebula - Simulator</li>
-                                <li><span class="bold">Project Description</span>: A system simulates the process of constructing an oil well. The purpose of the system is to help training junior petroleum engineers.</li>
-                                <li><span class="bold">Team Size</span>: 12</li>
-                                <li><span class="bold">Responsiblities</span>: Communicate with customer to get clear requirement. Develop and fix the application’s defect base on requirement. Prepare document and technical guide for developers joining in the middle of the project.</li>
-                                <li><span class="bold">Accomplishments</span>: Learned to develop software follow Scrum development process. Learned WPF, Caliburn.Micro Model-View-ViewModel framework. Got experience in working/communicate with American customers.</li>
-                                <li><span class="bold">Technologies</span>: XAML, WPF, Caliburn Micro, MEF.</li>
-                            </ul>
-                        </div>
-                        <!-- /.comments -->
-                    </div>
-                    <!-- /.experience-item -->
-                    <div class="experience-item" data-scroll-reveal="enter from the bottom over .5s">
-                        <div class="name-designation" data-scroll-reveal="enter from the left after .5s">
-                            <h3 class="designation">Pet Projects</h3>
-                            <p class="name-of-org"></p>
-                        </div>
-                        <!-- /.name-designation -->
-                        <div class="stay-time light-violet">
-                            <p>
-                                <br/> All the time
-                            </p>
-                        </div>
-                        <!-- /.stay-time -->
-                        <div class="comments" data-scroll-reveal="enter from the right after .5s">
-                            <p>In my free time, I do some projects on github as pet projects: <a href="https://github.com/quangduy13">https://github.com/conanak99/</a></p>
-                            
-                        </div>
-                        <!-- /.comments -->
-                    </div>
-                    <!-- /.experience-item -->
                 </div>
                 <!-- /.experience-items -->
             </div>
@@ -291,25 +235,6 @@
             <div class="education-container">
                 <div class="education-items">
                     <div class="col-md-12" data-scroll-reveal="enter from the top after .5s">
-                      <div class="education-item">
-                          <div class="edu-time light-green">
-                              <p>2017
-                                  <br /> -
-                                  <br /> Now</p>
-                          </div>
-                          <!-- /.edu-time -->
-                          <div class="edu-title">
-                              <p class="edu-session">MSc of International Innovation (Computer Science pathway)</p>
-                              <p class="edu-inst">Lancaster University, United Kingdom</p>
-                          </div>
-                          <!-- /.edu-title -->
-                          <div class="edu-comments">
-                              <ul>
-                                  <li>Degree grade: Distinction</li>
-                              </ul>
-                          </div>
-                          <!-- /.edu-comments -->
-                      </div>
                       <!-- /.education-item -->
                         <div class="education-item">
                             <div class="edu-time light-blue">
