update name company

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                   <div class="experience-item" data-scroll-reveal="enter from the bottom over .5s">
                       <div class="name-designation" data-scroll-reveal="enter from the left after .5s">
                           <h3 class="designation">Software Engineer</h3>
+                          <p class="name-of-org">One Mount Consumer (Former name: VinID)</p>
                       </div>
                       <!-- /.name-designation -->
                       <div class="stay-time light-violet">
