upate skill and framework

--- a/index.html
+++ b/index.html
@@ -123,12 +123,11 @@
                             <li>Java</li>
                             <li>C#. NET</li>
                             <li>JavaScript</li>
-                            <li>HTML, CSS</li>
                         </ul>
-                        <h2 class="box-title">Frameworks & platforms</h2>
+                        <h2 class="box-title">Frameworks</h2>
                         <ul>
-                            <li>Spring Boot, Spring MVC</li>
-                            <li>Knowledge about ASP.NET MVC /JavaScript/Node JS</li>
+                            <li>Spring Boot, Hibernate</li>
+                            <li>Knowledge about ASP.NET MVC /JavaScript</li>
                         </ul>
                     </div>
                 </div>
@@ -147,8 +146,7 @@
                         <h2 class="box-title">IDE</h2>
                         <ul>
                             <li>IntelliJ</li>
-                            <li>Atom</li>
-                            <li>Visual Studio 2012 & 2013</li>
+                            <li>VS Code</li>
                         </ul>
                     </div>
                 </div>
@@ -202,7 +200,7 @@
                   <!-- /.experience-item -->
                     <div class="experience-item" data-scroll-reveal="enter from the bottom over .5s">
                         <div class="name-designation" data-scroll-reveal="enter from the left after .5s">
-                            <h3 class="designation">Junior Developer</h3>
+                            <h3 class="designation">Software Engineer</h3>
                             <p class="name-of-org">Topica EdTech Group</p>
                         </div>
                         <!-- /.name-designation -->
@@ -251,9 +249,7 @@
                             <!-- /.edu-title -->
                             <div class="edu-comments">
                                 <ul>
-                                    <li>GPA: 7.3/10. Degree grade: Good</li>
-                                    <li>Team leader in the Capstone Project. Highest Capstone Project score in that semester.</li>
-                                
+                                    <li>GPA: 7.3/10. Degree grade: Good</li>                                
                                 </ul>
                             </div>
                             <!-- /.edu-comments -->
